[project]
name = "code-review-env"
version = "0.1.0"
description = "A real-world OpenEnv environment for code review"
authors = [
    {name = "Jayavardan", email = "jolapuramjayavardhan@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
    "fastmcp>=3.0.0",
    "openai>=2.0.0",
    "requests>=2.25.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]